# GIMP-EXR-plug-in

./: README.md
src/: CMakeLists.txt  conversion.cpp  conversion.hpp  exr_file.cpp  exr_file.hpp  plugin.cpp
